public/stylesheets/style.css
body {
  /* padding: 50px; */
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  background-image: url("/images/BG.jpg");
  /* background-image: url("/images/Background.png"); */
  background-size: cover;
  background-repeat: no-repeat;
  color: white;
}

a {
  color: #00b7ff;
  text-decoration: none;
}

ul {
  list-style: none;
  display: flex;
  justify-content: flex-start;
}

li {
  width: 5%;
  height: 60px;
  /* margin: 0 5px; */
}

.error {
  background-color: red;
}

.nav-container {
  position: absolute;
  top: 0vh;
  width: 100%;
  height: 50px;
  background-color: white;
  display: flex;
  align-items: flex-start;
  margin-left: -10px;
  padding-right: 10px;
}

nav {
  width: 100%;
  height: 40px;
}

ul img {
  margin-top: -12.5px;
  margin-right: 10px;
}

#home-li {
  margin-right: -10px;
}
#signup-li {
  margin-left: -10px;
}
#signin-li {
  margin-left: -10px;
}
#profile-li {
  margin-left: -10px;
}
#directory-li {
  margin-left: -12px;
}

